--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <p id="displayText">Omg Have you seen rattok🙀 ratecca is on the verge of death‼️ click the button below to donate 1,000 ratix to save her life!! my girls on life support frfr💯</p>
+        <p id="displayText">Current total: 1,000/230,000</p>
+        <p id="additionalText">Omg‼️ Have you see rattok❓ ratteca is on life support‼😣 Click this button to donate 1,000 ratix! </p>
         <button id="clickButton">Click Me!</button>
     </div>
     <script src="script.js"></script>
